adding static code analysis to travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: python
 python:
   - "3.6"
+install:
+  - pip install pycodestyle
+  - pip install pylint
 script:
+  - pycodestyle spotify-cli
+  - pylint spotify-cli
   - echo "build executed"
