adding more files to verify by pycodestyle

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ python:
 install:
   pip install pycodestyle
 script:
-  pycodestyle --show-source --show-pep8 --format=default spotifycli/spotifycli.py
+  - pycodestyle --show-source --show-pep8 --format=default spotifycli/spotifycli.py
+  - pycodestyle --show-source --show-pep8 --format=default spotifycli/version.py
+  - pycodestyle --show-source --show-pep8 --format=default spotifycli/__main__.py
+  - pycodestyle --show-source --show-pep8 --format=default spotifycli/__init__.py
+  - pycodestyle --show-source --show-pep8 --format=default setup.py
