--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.6", "3.7"]
+        python-version: ["3.7"]
     steps:
     - name: checkout
       uses: actions/checkout@v3
     - name: setup-python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.6'
+        python-version: '3.7'
         cache: 'pip'
     - name: install-requirements
       run: pip install -r requirements.txt
